fix horizontal scroll  bar

--- a/public/stylesheets/surveyForm.css
+++ b/public/stylesheets/surveyForm.css
@@ -1,6 +1,6 @@
 .cc-surveyFormPage {
   position: absolute;
-  width: 100%;
+  width: 90%;
 }
 
 .cc-titleInput {
